chore: 17강 예시 env 파일 추가 및 .gitignore 수정하여 로컬 env 파일 제외

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+#.env* 기본값 env.* 모든것을 제외
+.env.local
 
 # vercel
 .vercel
